Fix alignment of checkbox with label

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -260,4 +260,5 @@ label.large-checkbox {
 }
 .large-checkbox [type=checkbox] {
   zoom: 1.25;
+  vertical-align: middle;
 }
